--- a/index1.html
+++ b/index1.html
@@ -21,6 +21,8 @@
   <div class="box">
 
     <div class="left">
+      <a href="#" class="knopka">кнопка</a>
+      <a href="#" class="knopka">кнопка</a>
     </div>
 
     <div class="center">
