--- a/index1.html
+++ b/index1.html
@@ -4,6 +4,7 @@
 <head>
 <link rel="stylesheet" href="style.css">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>
     Блочная вёрстка
   </title>    
@@ -15,7 +16,7 @@
     <h1 align="center">ПРЕКРАСНЫЙ И НЕПОВТОРИМЫЙ САЙТ</h1>
   </div>
 
-  <div class="box">
+  <!-- <div class="box"> -->
     
     <div class="left">
       <a href="#" class="knopka">кнопка</a>
@@ -38,12 +39,12 @@
     <div class="right">
     </div>
 
-  </div>
+  <!-- </div> -->
 
   <div class="footer">
-    <div class="footer1" align="center"> Телефон: +7********** </div>
-    <div class="footer2" align="center"> Ждём Вас снова на нашем сайте! </div>
-    <div class="footer3" align="center"> Email: </div>
+    <div> Телефон: +7********** </div>
+    <div> Ждём Вас снова на нашем сайте! </div>
+    <div> Email: </div>
   </div>
 
 
