--- a/index1.html
+++ b/index1.html
@@ -18,8 +18,8 @@
   <div class="box">
     
     <div class="left">
-      <a href="#" class="knopka">кнопка</a>
-      <a href="#" class="knopka">кнопка</a>
+      <!-- <a href="#" class="knopka">кнопка</a> -->
+      <!-- <a href="#" class="knopka">кнопка</a> -->
       <ul class="topmenu">
         <li> <a href="#" class="knopka">Кнопка 1</a></li>
         <li><a href="#" class="knopka">Кнопка 2</a></li>
@@ -48,6 +48,7 @@
     </div>
 
     <div class="right">
+      <p style="color :yellow">Здесь может быть Ваша реклама </p>
     </div>
 
   </div>
